# zenita_rag

./: .env.example  .gitignore  BRIEF.md  BUSINESS_PROPOSAL.md  MODELLO_DATI.md  PITCH_SLIDES.md  README.md  REQUISITI.md  auth_test.out  contesto.md  pyproject.toml  role_manager.py
docs/: ACTION_PLAN.md  ARCHITETTURA.md  BUSINESS_PROPOSAL.md  CHANGELOG.md  INTERVENTI_FUTURI.md  KPI.md  MODELLO_DATI.md  PITCH.md  PITCH_SLIDES.md  REQUISITI.md  obsolescence.example.csv
scripts/: anonymize_logs.py  app.py  audit_obsolescence.py  enrich_metadata.py  eval_cases.json  eval_rag.py  index_documents.py  ingest_bandi.py  ingest_mit.py  ingest_ram.py  quarantine_source.py  query_rag.py
src/nextpulse/: __init__.py  api.py  auth.py  bandi_scraper.py  cache.py  config.py  configurator.py  document_processor.py  governance_log.py  pseudonymizer.py  query_log.py  rag_chain.py  ram_scraper.py  ratelimit.py  reranker.py  vector_store.py
tests/: conftest.py  test_auth.py  test_bandi_api.py  test_bandi_scraper.py  test_cache.py  test_configurator.py  test_enrich.py  test_eval.py  test_intent.py  test_obsolescence.py  test_ocr.py  test_rag.py  test_ram_scraper.py  test_ratelimit.py  test_reranker.py  test_stream.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: bandi.ts  config.ts  main.ts  style.css
