[project]
name = "nextpulse-rag"
version = "0.1.0"
description = "Minimal RAG system for hackathon challenges"
requires-python = ">=3.10"

dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.6.0",
    "openai>=1.3.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextpulse"]
