[project]
name = "nextpulse-rag"
version = "0.1.0"
description = "Minimal RAG system for hackathon challenges"
requires-python = ">=3.10"

dependencies = [
    "qdrant-client>=1.10.0",
    "sentence-transformers>=2.6.0",
    "openai>=1.3.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# Reversible Pseudonymization NER backend (GDPR Art. 32). The regex backend works
# out of the box; install these + a spaCy model to enable PERSON/ORG/LOCATION NER:
#   uv sync --extra pii && uv run python -m spacy download it_core_news_lg
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
# OCR fallback for scanned PDFs (set OCR_ENABLED=1). Also needs the Tesseract binary +
# Italian language pack at the OS level (e.g. winget install UB-Mannheim.TesseractOCR):
#   uv sync --extra ocr
ocr = [
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextpulse"]
